--- a/Capítulo 28/desafio/style.css
+++ b/Capítulo 28/desafio/style.css
@@ -1,6 +1,18 @@
+*,
+*::before,
+*::after,
+*::first-letter,
+*::first-line {
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+}
+
 body {
     display: grid;
-    grid-template: repeat(10, 50px) / repeat(4, 1fr);
+    grid-template: repeat(10, 1fr) / repeat(4, 1fr);
+    text-align: center;
+    height: 100vh;
 }
 
 header {
@@ -25,6 +37,7 @@ aside {
     grid-area: 4 / -2 / -2 / -1;
     
     background-color: tomato;
+
 }
 
 footer {
