--- a/Capítulo 28/desafio/style.css
+++ b/Capítulo 28/desafio/style.css
@@ -10,34 +10,38 @@
 
 body {
     display: grid;
-    grid-template: repeat(10, 1fr) / repeat(4, 1fr);
+    grid-template: 80px 40px 1fr 40px / 1fr 150px;
+    gap: 5px;
+
+
+
     text-align: center;
     height: 100vh;
+    width: 100vw;
 }
 
 header {
-    grid-area: 1 / 1 / span 2 / -1;
+    grid-area: 1 / 1 / 2 / -1;
     
     background-color: darkcyan;
 }
 
 nav {
-    grid-area: 3 / 1 / span 1 / -1;
+    grid-area: 2 / 1 / 3 / -1;
     
     background-color: darkkhaki;
 }
 
 main {
-    grid-area: 4 / 1 / -2 / -2;
+    grid-area: 3 / 1 / -2 / 2;
     
     background-color: wheat;
 }
 
 aside {
-    grid-area: 4 / -2 / -2 / -1;
+    grid-area: 3 / -2 / -2/ -1;
     
     background-color: tomato;
-
 }
 
 footer {
