--- a/Capítulo 29/projeto-portfolio/estilos/style.css
+++ b/Capítulo 29/projeto-portfolio/estilos/style.css
@@ -27,6 +27,8 @@
   --destaque: #0077ff;
   --destaque-inverso: #66bbff;
   --fundo-card: #ffffff;
+
+  --destaque-inverso-transparencia: #66baff4d;
 }
 
 body {
@@ -62,4 +64,57 @@ nav#menu a {
 nav#menu a:hover {
   background-color: var(--destaque-inverso);
   color: var(--destaque);
+}
+
+main {
+  display: grid;
+  grid-template-columns: 1fr 90vw 1fr; /* Aqui ele usou o grid como 'margins' laterais */
+  gap: 20px;
+  margin-top: 20px;
+}
+
+section#ficha {
+  background-color: var(--fundo-card);
+  padding: 20px;
+  border-radius: 8px;
+}
+
+section#ficha img.foto{
+  width: 200px;
+  aspect-ratio: 1/1;
+  object-fit: cover;
+  overflow: hidden;
+  border-radius: 50%;
+  border: 5px solid var(--fundo-card);
+  outline: 5px solid var(--destaque);
+  display: block;
+  margin: auto;
+  margin-bottom: 15px;
+}
+
+section#ficha h1 {
+  color: var(--destaque);
+  margin: 15px 0px;
+  font-size: 1.5em;
+  text-align: left;
+}
+
+div#social {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.6em;
+  /* gap: 1em; */
+  margin-top: 15px;
+}
+
+div#social a {
+  border-radius: 50%;
+  padding: .5em;
+}
+
+div#social a:hover {
+  background-color: var(--destaque-inverso-transparencia);
+  border-radius: 50%;
+  padding: .5em;
 }
