--- a/Capítulo 29/projeto-portfolio/estilos/style.css
+++ b/Capítulo 29/projeto-portfolio/estilos/style.css
@@ -77,6 +77,7 @@ section#ficha {
   background-color: var(--fundo-card);
   padding: 20px;
   border-radius: 8px;
+  grid-column: 2; /* importante colocar em todos porque é onde iniciará, deixando a primeira coluna como margin */
 }
 
 section#ficha img.foto{
@@ -117,4 +118,36 @@ div#social a:hover {
   background-color: var(--destaque-inverso-transparencia);
   border-radius: 50%;
   padding: .5em;
+}
+
+section#detalhes {
+  grid-column: 2;
+}
+
+article {
+  background-color: var(--fundo-card);
+  padding: 20px;
+  margin-bottom: 20px;
+  border-radius: 8px;
+}
+
+article h2 {
+  color: var(--destaque);
+  margin-bottom: 10px;
+}
+
+.video-container {
+  position: relative;
+  width: 100%;
+  margin: auto;
+  aspect-ratio: 16/9;
+}
+
+.video-container iframe{ /* Isso faz o encaixe do vídeo dentro do container */
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 8px;
 }
