--- a/Capítulo 29/projeto-portfolio/estilos/style.css
+++ b/Capítulo 29/projeto-portfolio/estilos/style.css
@@ -44,6 +44,9 @@ header {
   padding: 10px;
   display: flex;
   justify-content: flex-end;
+  position: sticky;
+  top: 0;
+  z-index: 1;
 }
 
 nav#menu ul {
